Just Exercise website for Html

--- a/Day-41/WebDev/List/index.html
+++ b/Day-41/WebDev/List/index.html
@@ -24,5 +24,7 @@
         <a href="#">Aniwave</a>
       </li>
     </ol>
+
+    <img src="https://picsum.photos/300" alt="alternative text">
   </body>
 </html>
